map cordinate done

--- a/app/src/main/res/layout/activity_attendance_summary.xml
+++ b/app/src/main/res/layout/activity_attendance_summary.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     android:stretchColumns="5"
     android:orientation="vertical">
+    <!--<include
+        android:id="@+id/app_bar"
+        layout="@layout/app_toolbar"/>-->
 
     <include layout="@layout/search_formate"/>
 
