--- a/app/src/main/res/layout/activity_vehical_enquiry.xml
+++ b/app/src/main/res/layout/activity_vehical_enquiry.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".acitvities.VehicalEnquiryActivity">
 
+   <!-- <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_toolbar"/>-->
+
     <include layout="@layout/activity_leave_info"/>
 
 
