--- a/app/src/main/res/layout/activity_docket_tracking.xml
+++ b/app/src/main/res/layout/activity_docket_tracking.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/docketscrollview_Id"
@@ -8,6 +8,11 @@
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context=".acitvities.DocketTracking">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
     <LinearLayout
         android:id="@+id/docketLinearLayoutId"
@@ -444,6 +449,7 @@
             android:textColor="@color/white"/>
 
     </LinearLayout>
+    </ScrollView>
 
 
-</ScrollView>
+</LinearLayout>
