--- a/app/src/main/res/layout/activity_emp_profile.xml
+++ b/app/src/main/res/layout/activity_emp_profile.xml
@@ -7,6 +7,9 @@
     android:orientation="vertical"
     tools:context=".acitvities.EmpProfileActivity"
     tools:layout_editor_absoluteY="81dp">
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_toolbar"/>
 
     <ScrollView
         android:layout_width="match_parent"
