--- a/app/src/main/res/layout/activity_leave_info.xml
+++ b/app/src/main/res/layout/activity_leave_info.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".acitvities.LeaveInfoActivity">
+    <!--<include
+        android:id="@+id/app_bar"
+        layout="@layout/app_toolbar"/>-->
 
     <include layout="@layout/search_formate"/>
 
