--- a/app/src/main/res/layout/app_bar_main_home.xml
+++ b/app/src/main/res/layout/app_bar_main_home.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.it2.axpresslogisticapp.acitvities.MainHomeActivity">
 
+    <!--<include
+        android:id="@+id/app_bar"
+        layout="@layout/app_toolbar"/>-->
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
