--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -6,5 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".acitvities.AddCustomerActivity">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_toolbar"/>
 
 </android.support.constraint.ConstraintLayout>
