--- a/app/src/main/res/layout/activity_docket_tracking.xml
+++ b/app/src/main/res/layout/activity_docket_tracking.xml
@@ -8,6 +8,10 @@
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context=".acitvities.DocketTracking">
+
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/mapapp_toolbar"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -437,16 +441,6 @@
                 </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
-
-        <Button
-            android:id="@+id/mapview_clickbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
-            android:text="@string/mapview"
-            android:layout_gravity="center"
-            android:textSize="10sp"
-            android:textColor="@color/white"/>
 
     </LinearLayout>
     </ScrollView>
