--- a/app/src/main/res/layout/activity_operation.xml
+++ b/app/src/main/res/layout/activity_operation.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_toolbar"/>
+
     <GridView
         android:id="@+id/gridhrms"
         android:layout_width="match_parent"
