--- a/app/src/main/res/layout/activity_vehical_enquiry.xml
+++ b/app/src/main/res/layout/activity_vehical_enquiry.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".acitvities.VehicalEnquiryActivity">
 
-   <!-- <include
+    <include
         android:id="@+id/app_bar"
-        layout="@layout/app_toolbar"/>-->
+        layout="@layout/app_toolbar"/>
 
     <include layout="@layout/activity_leave_info"/>
 
