add view and gallary funcationality

--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -7,9 +7,9 @@
     tools:context=".ScannerActivity"
     tools:layout_editor_absoluteY="81dp">
 
-    <!--<include
+    <include
         android:id="@+id/app_bar"
-        layout="@layout/app_toolbar"/>-->
+        layout="@layout/app_toolbar"/>
 
     <ImageButton
         android:id="@+id/camerabtn"
