--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -347,11 +347,33 @@
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
 
-                        <ImageView
-                            android:id="@+id/imageViewFront"
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:src="@drawable/greenleafsview"/>
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/imageViewFront"
+                                android:layout_width="400dp"
+                                android:layout_height="200dp"
+                                android:src="@drawable/greenleafsview" />
+
+                            <ImageButton
+                                android:id="@+id/icon_rotate_rightFront"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:src="@drawable/icon_rotate_right" />
+
+                            <ImageButton
+                                android:id="@+id/icon_rotate_leftFront"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_below="@+id/icon_rotate_rightFront"
+                                android:src="@drawable/icon_rotate_left" />
+
+
+                        </RelativeLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -360,6 +382,7 @@
                         android:layout_marginTop="10dp"
                         android:orientation="vertical">
 
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -367,11 +390,34 @@
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
 
-                        <ImageView
-                            android:id="@+id/imageViewBack"
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:src="@drawable/greenleafsview"/>
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/imageViewBack"
+                                android:layout_width="400dp"
+                                android:layout_height="200dp"
+                                android:src="@drawable/greenleafsview" />
+
+                            <ImageButton
+                                android:id="@+id/icon_rotate_right"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:src="@drawable/icon_rotate_right" />
+
+                            <ImageButton
+                                android:id="@+id/icon_rotate_left"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_below="@+id/icon_rotate_right"
+                                android:src="@drawable/icon_rotate_left" />
+
+
+                        </RelativeLayout>
+
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
