--- a/app/src/main/res/layout/activity_card_scanner.xml
+++ b/app/src/main/res/layout/activity_card_scanner.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".CardScanner"
+    tools:context=".acitvities.CardScanner"
     tools:showIn="@layout/activity_card_scanner">
 
     <include
