--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/Camera"
+        android:text="@string/add_new_card"
         app:layout_constraintEnd_toEndOf="@+id/camerabtn"
         app:layout_constraintStart_toStartOf="@+id/camerabtn"
         app:layout_constraintTop_toBottomOf="@+id/camerabtn" />
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/scan_qrcode"
+        android:text="@string/scan_new_card"
         app:layout_constraintEnd_toEndOf="@+id/qrcodebtn"
         app:layout_constraintStart_toStartOf="@+id/qrcodebtn"
         app:layout_constraintTop_toBottomOf="@+id/qrcodebtn" />
