--- a/app/src/main/res/layout/activity_docket_enquiry.xml
+++ b/app/src/main/res/layout/activity_docket_enquiry.xml
@@ -89,6 +89,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/button_shape"
         android:padding="12dp"
+        android:textColor="@color/white"
         android:text="@string/searchbtn" />
     </LinearLayout>
 </LinearLayout>
